# textunwrap

./: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  requirements-dev.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_textunwrap.py
tests/licenses/: AMDPLPA.txt  VSL.md
textunwrap/: __init__.py  cli.py  textunwrap.py  textwrap.py
