[metadata]
name = textunwrap
version = 0.1.1
description = Tries to reverse textwrap.wrap.
long_description = file: README.rst
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/textunwrap
license = MIT
keywords = textunwrap
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
packages = textunwrap
package_dir = textunwrap=textunwrap
zip_safe = False

[options.entry_points]
console_scripts =
    textunwrap=textunwrap.textunwrap:run
    textwrap=textunwrap.textwrap:run

[flake8]
exclude = docs
